--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,10 @@
         "guzzlehttp/guzzle": "^7.2",
         "react/event-loop": "^1.3.0",
         "react/stream": "^1.2.0",
-        "react/http": "^1.6.0"
+        "react/http": "^1.6.0",
+        "cboden/ratchet": "^0.4.4"
+    },
+    "autoload": {
+        "classmap": ["./"]
     }
 }
