--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
         "react/event-loop": "^1.3.0",
         "react/stream": "^1.2.0",
         "react/http": "^1.6.0",
-        "cboden/ratchet": "^0.4.4"
+        "cboden/ratchet": "^0.4.4",
+        "ext-ds": "*"
     },
     "autoload": {
         "classmap": ["./"]
